[package]
name = "mutual_information"
version = "0.1.0"
authors = ["Lissa Hyacinth <lissahyacinth@gmail.com>"]
edition = "2018"
description = "Calculate Mutual Information for Paired Vectors"
license = "GNU LGPLv3 "

[dependencies]
pyo3 = { version = "0.14.0", features = ["extension-module"] }
itertools = "0.10.1"

[lib]
name = "mutual_information"
crate-type = ["cdylib"]